--- a/MapDiffBot/Views/DmeConfiguration/Index.cshtml
+++ b/MapDiffBot/Views/DmeConfiguration/Index.cshtml
@@ -2,9 +2,9 @@
     <form asp-controller="DmeConfiguration" asp-action="Edit" method="post">
         <h3>@ViewBag.EditHeader:</h3>
         <input type="text" name="newDmePath" placeholder="@ViewBag.AutoDme" value="@ViewBag.TargetDme" />
-        <button type="submit" class="btn btn-primary" @(ViewBag.IsMaintainer ? String.Empty : "disabled")>@ViewBag.Submit</button>
+        <button type="submit" class="btn btn-primary" @(ViewBag.AuthLevel == AuthenticationLevel.Maintainer ? String.Empty : "disabled")>@ViewBag.Submit</button>
     </form>
-    @if (!ViewBag.IsMaintainer)
+    @if (ViewBag.AuthLevel != AuthenticationLevel.Maintainer)
     {
         <span class="label label-warning">@ViewBag.OnlyMemes</span>
     }
